--- a/{{cookiecutter.profile_name}}/config.yaml
+++ b/{{cookiecutter.profile_name}}/config.yaml
@@ -1,6 +1,6 @@
 no-shared-fs: true
-default-remote-provider: XRootD
-default-remote-prefix: "eoslhcb.cern.ch/{{cookiecutter.storage_prefix}}"
+default-remote-provider: DiracSE
+default-remote-prefix: "{{cookiecutter.storage_prefix}}"
 jobscript: "grid-jobscript.sh"
 cluster: "grid-submit.py"
 cluster-status: "grid-status.py"
